crashing when srolling down in text editor ! #33121

Closed
opened 2012-11-08 19:46:00 +01:00 by Ricky J · 5 comments

%%%i cannot scroll in text editor at more then 3/4 the lenght of the file then it goes into non responding

and have to crash it !

windows 32 bits 51992

second problem with text editor

also if there are any UN8 characters in a file i cannot upload in text editor
goes into non responding and no error messages or where the characters is located in py file!

thanks
happy blendering

%%%

%%%i cannot scroll in text editor at more then 3/4 the lenght of the file then it goes into non responding and have to crash it ! windows 32 bits 51992 second problem with text editor also if there are any UN8 characters in a file i cannot upload in text editor goes into non responding and no error messages or where the characters is located in py file! thanks happy blendering %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Seems both issues are caused by non-utf8 characters.%%%

%%%Seems both issues are caused by non-utf8 characters.%%%

%%%fixed r52021.%%%

%%%fixed r52021.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%by the way i also saw afterward that in text editor Ctrl-end did not work either !
or also by selecting it the view menu

and by fixe what do you mean?
is it going to give an error now
or will it still not respond and need to crash the file?

thanks
%%%

%%%by the way i also saw afterward that in text editor Ctrl-end did not work either ! or also by selecting it the view menu and by fixe what do you mean? is it going to give an error now or will it still not respond and need to crash the file? thanks %%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33121
No description provided.