fix [#33121] crashing when srolling down in text editor !